--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,4 +18,6 @@ jobs:
     - name: Build
       run: swift build -v
     - name: Run tests
-      run: swift test -v
+      run: swift test -v --parallel --skip XnLevenshteinPerformance
+    - name: Run tests
+      run: swift test -v --skip XnLevenshteinTests -Xswiftc -O
