--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,8 +15,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Run unit tests
+      - name: unit tests
         run: swift test -v --parallel --filter XnLevenshteinTests
+      - name: coverage
+        uses: sersoft-gmbh/swift-coverage-action@v4.0
+      - name: codecov
+        run: bash <(curl -s https://codecov.io/bash)
+          
 
   performance-tests:
     runs-on: macos-15
@@ -25,3 +30,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run performance tests
         run: swift test -v --filter XnLevenshteinPerformance -Xswiftc -O
+      - name: coverage
+        uses: sersoft-gmbh/swift-coverage-action@v4.0
+      - name: codecov
+        run: bash <(curl -s https://codecov.io/bash)
