--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Swift project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
-
-name: Swift
+name: tests
 
 on:
   push:
@@ -16,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: unit tests
-        run: swift test -v --parallel --filter XnLevenshteinTests --enable-code-coverage
+        run: swift test --parallel --filter Unit --enable-code-coverage
       - name: coverage
         uses: sersoft-gmbh/swift-coverage-action@v4.0
       - name: codecov
@@ -31,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: perf tests
-        run: swift test -v --filter XnLevenshteinPerformance --enable-code-coverage -Xswiftc -O
+        run: swift test --filter Performance --enable-code-coverage -Xswiftc -O
       - name: coverage
         uses: sersoft-gmbh/swift-coverage-action@v4.0
       - name: codecov
